objects/ALTF__Solution__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Solution_Family__c</fullName>
        <label>Solution Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PERFORMANCE MGR</fullName>
                    <default>true</default>
                    <label>PERFORMANCE MGR</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Methodology Services</fullName>
                </value>
                <value>
                    <fullName>Business Mgt</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Workshops</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Solution_Long_Name__c</fullName>
        <label>Solution Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__SortOrder__c</fullName>
        <description>SortOrder</description>
        <inlineHelpText>SortOrder</inlineHelpText>
        <label>Market View SortOrder (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Tooltip__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Altify Solution</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ALTF__All_Account_Management_Solutions</fullName>
        <columns>ALTF__Solution_Family__c</columns>
        <columns>NAME</columns>
        <columns>ALTF__Solution_Long_Name__c</columns>
        <columns>ALTF__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ALTF__All_Solutions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Solutions</label>
    </listViews>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>